# metahack

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test.py  test_grader.py  test_uvicorn.py  validate.sh
app/: __init__.py  baseline.py  config.py  env.py  grader.py  main.py  models.py  runtime.py  scoring.py  tasks.py
server/: app.py
tests/: test_api.py  test_scoring.py
